--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,3 @@
-MONGODB_CONNECTION_URL=mongodb+srv://userOauth:userOauth123@cluster0.eenhn.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_CONNECTION_URL=MONGODB_CONNECTION_URL
 PORT=5000
+JWT_SECRET_KEY=JWT_SECRET_KEY
